# deluge

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  deluge.cabal  stack-8.6.3.yaml
app/: Main.hs
src/: Deluge.hs
